# attribute-derive

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: docs.yml  release.yaml  test.yaml
docs/: traits.html
example/: Cargo.toml
example/src/: lib.rs
example/tests/: ui.rs
example/tests/ui/: custom.rs  custom.stderr  normal.rs  normal.stderr
macro/: Cargo.toml  README.md
macro/src/: lib.rs
src/: from_partial.rs  lib.rs  parsing.rs  std_impls.rs  syn_impls.rs  utils.rs
tests/: derive-legacy.rs  derive.rs  redesign.rs
