[package]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers", "parsing"]
description = "Clap for proc macro attributes"
documentation = "https://docs.rs/attribute-derive"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["derive", "macro"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/attribute-derive"
name = "attribute-derive"
version = "0.5.0"
edition = "2021"

[lib]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn =  "1"

[features]
# default = ["syn-full"]
syn-full = ["syn/full"]

[dependencies.attribute-derive-macro]
version = "0.5.0"
path = "macro"

[workspace]
members = ["example", "macro"]
