[package]
name = "example"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
attribute-derive = { path = "..", features = ["syn-full"] }
syn = { version = "1", features = ["full"] }
trybuild = "1"
