[package]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers", "parsing"]
description = "Clap for proc macro attributes"
documentation = "https://docs.rs/attribute-derive"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
keywords = ["derive", "macro"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/attribute-derive"
version = "0.2.0"
edition = "2021"
name = "attribute-derive-macro"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"
quote = "1.0.18"
quote-use = { version = "0.5.0", features = ["namespace_idents"] }
syn = "1.0"
