[package]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers", "parsing"]
description = "Clap for proc macro attributes"
documentation = "https://docs.rs/attribute-derive"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["derive", "macro"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/attribute-derive"
version = "0.6.1"
edition = "2021"
name = "attribute-derive-macro"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
quote-use = { version = "0.7", features = ["namespace_idents"] }
syn = "2"
proc-macro-utils = "0.8.0"
# proc-macro-utils = {path = "../../proc-macro-utils"}
interpolator = { version = "0.5.0", features = ["iter"] }
collection_literals = "1"

[package.metadata.release]
tag = false
shared-version = true
